new html and css changes

--- a/cohorts/5/index.html
+++ b/cohorts/5/index.html
@@ -1,59 +1,139 @@
+<!DOCTYPE html>
+<html lang="en">
+
 <head>
     <link rel="stylesheet" type="text/css" href="index.css" />
-    <style>
-        
-    </style>
+    <link href="/your-path-to-fontawesome/css/all.css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Domine&family=Montserrat:wght@700&display=swap"
+        rel="stylesheet">
+    <title>Cohort the Fifth Element</title>
+    <meta name="description" content="">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 
 <body>
-    <header>
-        <div class="flex-container">
-        <h1>
-            Cohort the <span>Fifth</span> Element
-        </h1>
+    <header class="showcase">
+        <div class="showcase-top">
+            <img src="assets/header.png" alt="Fifth">
+            <a href="#" class="btn btn-rounded"></a>
+        </div>
+        <div class="showcase-content">
+            <h1>Cohort The Fifth Element</h1>
+            <p></p>
+            <a href="#" class="btn btn-xl">
+                <i class="fas fa-chevron-right btn-icon"></i>
+            </a>
         </div>
     </header>
- 
-    <h2>
-        TFE's Motto
-    </h2>
 
-    <p>
-            I am the gatekeeper of my own destiny, and I will have my glory day in the hot sun.
-    </p>
+    <div class="flexCen">
+        <div class="about-section">
+            <h1>TFE's Motto</h1>
+            <p> I am the gatekeeper of my own destiny, and I will have my glory day in the hot sun.</p>
+        </div>
+    </div>
+
+    <h2 style="text-align:center">Our Team</h2>
+
 
     <main>
         <div class=”gallery”>
             <h2>
                 Cohort Names
-            </h2>   
-            <div class="outer-grid">
-                <div class="inner-grid">
-                    <img src="assets/Image from iOS.jpg">
-                    <img src="assets/IMG_9387.JPG">
-                </div>
-                <div class="inner-grid">
-                    <img src="assets/Me_on_hike.png">
-                    <img src="assets/PBD_JasmineLi.jpg">
+            </h2>
+        </div>
+
+        <div class="row">
+
+
+            <div class="column">
+                <div class="card">
+                    <img src="assets/Image from iOS.jpg" style="width:100%" alt="Madeline">
+                    <div class="container">
+                        <h2>Madeline</h2>
+                        <p class="title"></p>
+                        <p></p>
+                        <p><a href="https://github.com/GTBitsOfGood/bootcamp/tree/fall-2020/TFE-madeline"
+                                target="_blank"><button class="button">Contact</button></a></p>
+                    </div>
                 </div>
             </div>
-          </div>
-        <section class="gallery">
 
-        </section>
-        <div class="names">
-            <ul>
-                <li><a href = "https://github.com/GTBitsOfGood/bootcamp/tree/fall-2020/TFE-Jasmine">Jasmine</a></li> 
-                <li><a href = "https://github.com/GTBitsOfGood/bootcamp/tree/fall-2020/TFE-Carlo">Carlo</a></li>
-                <li><a href = "https://github.com/GTBitsOfGood/bootcamp/tree/fall-2020/TFE-sahya">Sahya</a></li>
-                <li><a href = "https://github.com/GTBitsOfGood/bootcamp/tree/fall-2020/TFE-madeline">Madeline</a></li>
-            </ul>
+
+            <div class="column">
+                <div class="card">
+                    <img src="assets/PBD_JasmineLi.jpg" style="width:100%" alt="Jasmine">
+                    <div class="container">
+                        <h2>Jasmine
+                        </h2>
+                        <p class="title"></p>
+                        <p></p>
+                        <p><a href="https://github.com/GTBitsOfGood/bootcamp/tree/fall-2020/TFE-Jasmine"
+                                target="_blank"><button class="button">Contact</button></a></p>
+                    </div>
+                </div>
+            </div>
+
+
+            <div class="column">
+                <div class="card">
+                    <img src="assets/Me_on_hike.png" style="width:100%" alt="Carlo">
+                    <div class="container">
+                        <h2>Carlo</h2>
+                        <p></p>
+                        <p><a href="https://github.com/GTBitsOfGood/bootcamp/tree/fall-2020/TFE-Carlo"
+                                target="_blank"><button class="button">Contact</button></a>
+                        </p>
+                    </div>
+                </div>
+            </div>
+
+
+            <div class="column">
+                <div class="card">
+                    <img src="assets/IMG_9387.JPG" style="width:100%">
+                    <div class="container">
+                        <h2>Sahya</h2>
+                        <p></p>
+                        <p><a href="https://github.com/GTBitsOfGood/bootcamp/tree/fall-2020/TFE-sahya"
+                                target="_blank"><button class="button">Contact</button></a></p>
+                    </div>
+                </div>
+            </div>
         </div>
-        
+
+
     </main>
 
-    <footer>
+    <footer class="footer">
+        <p>Questions? Call 1-866-579-7172</p>
+        <div class="footer-cols">
+            <ul>
+                <li><a href="#">FAQ</a></li>
+                <li><a href="#">Investor Relations</a></li>
+                <li><a href="#">Ways To Watch</a></li>
+                <li><a href="#">Corporate Information</a></li>
+                <li><a href="#">Netflix Originals</a></li>
+            </ul>
+            <ul>
+                <li><a href="#">Help Center</a></li>
+                <li><a href="#">Jobs</a></li>
+                <li><a href="#">Terms Of Use</a></li>
+                <li><a href="#">Contact Us</a></li>
+            </ul>
+            <ul>
+                <li><a href="#">Account</a></li>
+                <li><a href="#">Redeem Gift Cards</a></li>
+                <li><a href="#">Privacy</a></li>
+                <li><a href="#">Speed Test</a></li>
+            </ul>
+            <ul>
+                <li><a href="#">Media Center</a></li>
+                <li><a href="#">Buy Gift Cards</a></li>
+                <li><a href="#">Cookie Preferences</a></li>
+                <li><a href="#">Legal Notices</a></li>
+            </ul>
+        </div>
 
     </footer>
 </body>
-
