Added Color to Vivian nametag

--- a/cohorts/2/index.html
+++ b/cohorts/2/index.html
@@ -17,7 +17,7 @@
         <li><span style="color:orange">Seife</span></li>
         <li>Shree</li>
         <li><span style="color:blue">Evan</span></li>
-        <li>Vivian</li>
+        <li><span style="color:purple">Vivian</span></li>
     </ul>
     <img src="teamimage.jpg" alt="team image">
     <div>
