added javascript to populate text

--- a/cohorts/4/index.html
+++ b/cohorts/4/index.html
@@ -5,25 +5,30 @@
 </head>
 <body>
     <h1>KAIRSCares</h1>
-    <h3>we KAIR about development but it Scares us too</h3>
-    <ul>
-        <li>
-            <a id = "Ashwini" href='https://github.com/GTBitsOfGood/bootcamp/tree/fall-2020/KAIRScares-ashwini'>Ashwini</a>
+    <h3 id="motto"></h3>
+    <ul class="grid-container">
+        <li class="grid-item">
+            <img src="./Ashwini.jpg">
+            <a id = "Ashwini" href='https://github.com/GTBitsOfGood/bootcamp/tree/fall-2020/KAIRScares-ashwini'></a>
         </li>
-        <li>
-            <a id = "Sneh" href='https://github.com/GTBitsOfGood/bootcamp/tree/fall-2020/KAIRScares-Sneh'>Sneh</a>
+        <li class="grid-item">
+            <img src="./Sneh.jpg">
+            <a id = "Sneh" href='https://github.com/GTBitsOfGood/bootcamp/tree/fall-2020/KAIRScares-Sneh'></a>
         </li>
-        <li>
-            <a id = "Ruchi" href='https://github.com/GTBitsOfGood/bootcamp/tree/fall-2020/KAIRScares-ruchi'>Ruchi</a>
+        <li class="grid-item">
+            <img src="Ruchi.jpg">
+            <a id = "Ruchi" href='https://github.com/GTBitsOfGood/bootcamp/tree/fall-2020/KAIRScares-ruchi'></a>
         </li>
-        <li>
-            <a id = "Ila" href='https://github.com/GTBitsOfGood/bootcamp/tree/fall-2020/KAIRScares-ila'>Ila</a>
+        <li class="grid-item">
+            <img src="Ila.jpg">
+            <a id = "Ila" href='https://github.com/GTBitsOfGood/bootcamp/tree/fall-2020/KAIRScares-ila'></a>
         </li>
-        <li>
-            <a id = "Kevin" href='#'>Kevin</a>
+        <li class="grid-item">
+            <a id = "Kevin" href='#'></a>
         </li>
     </ul>
     <p>
         <img src='https://media1.tenor.com/images/1b9518b2aeff720626a8b21528453a6e/tenor.gif?itemid=5570642'/>
     </p>
+    <script src="./index.js"></script>
 </body>
