--- a/cohorts/1/index.html
+++ b/cohorts/1/index.html
@@ -2,9 +2,41 @@
 <html>
     <head>
         <link rel="stylesheet" href="index.css">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css">
         <title>HyperText Assassins</title>
     </head>
     <body>
+        <nav>
+            <ul class="menu">
+                <li class="logo"><a href="#">Hypertext Assassins</a></li>
+                <li class="item"><a href="#">Home</a></li>
+                <li class="item"><a href="#">About</a></li>
+                <li class="item has-submenu">
+                    <a tabindex="0">Members</a>
+                    <ul class="submenu">
+                        <li class="subitem"><a href="#">Emily</a></li>
+                        <li class="subitem"><a href="#">Marlene</a></li>
+                        <li class="subitem"><a href="#">Kirtana</a></li>
+                        <li class="subitem"><a href="#">Eashan</a></li>
+                        <li class="subitem"><a href="#">Carsen</a></li>
+                        <li class="subitem"><a href="#">Isha</a></li>
+                    </ul>
+                </li>
+                <li class="item has-submenu">
+                    <a tabindex="0">Projects</a>
+                    <ul class="submenu">
+                        <li class="subitem"><a href="#">Flying Bird</a></li>
+                        <li class="subitem"><a href="#">Falling Bird</a></li>
+                        <li class="subitem"><a href="#">Another Project</a></li>
+                    </ul>
+                </li>
+                <li class="item"><a href="#">Blog</a></li>
+                <li class="item"><a href="#">Contact</a>
+                    <li class="item button"><a href="#">Log In</a></li>
+                    <li class="item button secondary"><a href="#">Sign Up</a></li>
+                    <li class="toggle"><a href="#"><i class="fas fa-bars"></i></a></li>
+            </ul>
+        </nav>
         <header>
             <!-- <img src="assets/header.png" width="400" height="100"/> -->
         </header>
