fixed color going away on hover

--- a/cohorts/2/index.html
+++ b/cohorts/2/index.html
@@ -10,12 +10,12 @@
     <p id=motto>send help</p>
     <h2 class=smallTitle>Members</h2>
     <ul id=memberList>
-        <li><span style="color:pink">Alice</span></li>
+        <li style="color:pink">Alice</li>
         <li style="color:green">Lidya</li>
-        <li><span style="color:orange">Seife</span></li>
+        <li style="color:orange">Seife</li>
         <li>Shree</li>
-        <li><span style="color:blue">Evan</span></li>
-        <li><span style="color:purple">Vivian</span></li>
+        <li style="color:blue">Evan</li>
+        <li style="color:purple">Vivian</li>
     </ul>
     <img src="teamimage.jpg" alt="team image">
     <div>
