trying fun fact js stuff

--- a/cohorts/6/index.html
+++ b/cohorts/6/index.html
@@ -24,7 +24,7 @@
         <h2>Our Cohort Members:</h2>
       </div>
       <div class="all">
-        <div class="card">
+        <div class="card"  id='StephanieCard'>
           <img src="1.jpg" style="width: 350px;height: 300px; border-radius:15px 15px 0px 0px;" />
           <h1>Stephanie Luo</h1>
           <p class="title">The Hardworking Crewmate</p>
@@ -37,7 +37,7 @@
         </div>
 
 
-        <div class="card">
+        <div class="card"  id='NidhishaCard'>
           <img src="2.jpg" style="width: 350px; height: 300px; border-radius:15px 15px 0px 0px;" />
           <h1>Nidhisha Dasari</h1>
           <p class="title">The Sus One</p>
@@ -49,7 +49,7 @@
           </p>
         </div>
 
-      <div class="card">
+      <div class="card" id='JacobCard' onmouseover="document.getElementById('funfactfootertext').innerHTML = 'Jacob has flown the Goodyear blimp'">
         <img src="3.png" style="width: 350px; height: 300px; border-radius:15px 15px 0px 0px;" />
         <h1>Jacob Weinman</h1>
         <p class="title">The Imposter</p>
@@ -65,5 +65,5 @@
       <div></div>
     </section>
   </main>
-  <footer></footer>
+  <footer class="funfactfooter" style="width: 600px; height: 200px; "><h1 id="funfactfootertext"></h1></footer>
 </body>
