Added fact and did grid stuff

--- a/cohorts/4/index.html
+++ b/cohorts/4/index.html
@@ -6,27 +6,28 @@
 <body>
     <h1>KAIRSCares</h1>
     <h3 id="motto"></h3>
-    <ul class="grid-container">
-        <li class="grid-item">
+    <div class="container">
+        <div class="item">
             <img src="./Ashwini.jpg">
             <a id = "Ashwini" href='https://github.com/GTBitsOfGood/bootcamp/tree/fall-2020/KAIRScares-ashwini'></a>
-        </li>
-        <li class="grid-item">
+            <p id = "Ashwini_fact"></p>
+        </div>
+        <div class="item">
             <img src="./Sneh.jpg">
             <a id = "Sneh" href='https://github.com/GTBitsOfGood/bootcamp/tree/fall-2020/KAIRScares-Sneh'></a>
-        </li>
-        <li class="grid-item">
+            <p id = "Sneh_fact"></p>
+        </div>
+        <div class="item">
             <img src="Ruchi.jpg">
             <a id = "Ruchi" href='https://github.com/GTBitsOfGood/bootcamp/tree/fall-2020/KAIRScares-ruchi'></a>
-        </li>
-        <li class="grid-item">
+            <p id = "Ruchi_fact"></p>
+        </div>
+        <div class="item">
             <img src="Ila.jpg">
             <a id = "Ila" href='https://github.com/GTBitsOfGood/bootcamp/tree/fall-2020/KAIRScares-ila'></a>
-        </li>
-        <li class="grid-item">
-            <a id = "Kevin" href='#'></a>
-        </li>
-    </ul>
+            <p id = "Ila_fact"></p>
+        </div>
+    </div>
     <p>
         <img src='https://media1.tenor.com/images/1b9518b2aeff720626a8b21528453a6e/tenor.gif?itemid=5570642'/>
     </p>
