--- a/cohorts/5/index.html
+++ b/cohorts/5/index.html
@@ -14,7 +14,7 @@
 <body>
     <header class="showcase">
         <div class="showcase-top">
-            <img src="assets/header.png" alt="Fifth">
+
             <a href="#" class="btn btn-rounded"></a>
         </div>
         <div class="showcase-content">
@@ -101,13 +101,13 @@
                 </div>
             </div>
         </div>
-
-
     </main>
 
     <footer class="footer">
-        <p>Thanks for stopping by!</p>
-        <div class="footer-cols">
+        <div class="footer-content">
+            <img src="assets/background.jpg" class="fifth">
+            <img src="assets/200.gif" class="gif" />
         </div>
+        <p>Thanks for stopping by! :)</p>
     </footer>
 </body>
