--- a/cohorts/1/index.html
+++ b/cohorts/1/index.html
@@ -1,51 +1,56 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <link rel="stylesheet" href="index.css">
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css">
-        <title>HyperText Assassins</title>
-    </head>
-    <body>
+
+<head>
+    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css">
+    <title>HyperText Assassins</title>
+</head>
+
+<body>
+    <header>
         <nav>
             <ul class="menu">
                 <li class="logo"><a href="#">Hypertext Assassins</a></li>
-                <li class="item"><a href="#">Home</a></li>
-                <li class="item"><a href="#">About</a></li>
+                <li class="item"><a href="./index.html">Home</a></li>
+                <!-- <li class="item"><a href="#">About</a></li> -->
                 <li class="item has-submenu">
                     <a tabindex="0">Members</a>
                     <ul class="submenu">
-                        <li class="subitem"><a href="#">Emily</a></li>
-                        <li class="subitem"><a href="#">Marlene</a></li>
-                        <li class="subitem"><a href="#">Kirtana</a></li>
-                        <li class="subitem"><a href="#">Eashan</a></li>
-                        <li class="subitem"><a href="#">Carsen</a></li>
-                        <li class="subitem"><a href="#">Isha</a></li>
+                        <li class="subitem"><a href="emily.html">Emily</a></li>
+                        <li class="subitem"><a href="marlene.html">Marlene</a></li>
+                        <li class="subitem"><a href="kirtana.html">Kirtana</a></li>
+                        <li class="subitem"><a href="eashan.html">Eashan</a></li>
+                        <li class="subitem"><a href="carsen.html">Carsen</a></li>
+                        <li class="subitem"><a href="isha.html">Isha</a></li>
                     </ul>
                 </li>
-                <li class="item has-submenu">
+                <!-- <li class="item has-submenu">
                     <a tabindex="0">Projects</a>
                     <ul class="submenu">
                         <li class="subitem"><a href="#">Flying Bird</a></li>
                         <li class="subitem"><a href="#">Falling Bird</a></li>
                         <li class="subitem"><a href="#">Another Project</a></li>
-                    </ul>
+                    </ul> -->
                 </li>
-                <li class="item"><a href="#">Blog</a></li>
+                <!-- <li class="item"><a href="#">Blog</a></li>
                 <li class="item"><a href="#">Contact</a>
-                    <li class="item button"><a href="#">Log In</a></li>
-                    <li class="item button secondary"><a href="#">Sign Up</a></li>
-                    <li class="toggle"><a href="#"><i class="fas fa-bars"></i></a></li>
+                <li class="item button"><a href="#">Log In</a></li>
+                <li class="item button secondary"><a href="#">Sign Up</a></li> -->
+                <li class="toggle"><a href="#"><i class="fas fa-bars"></i></a></li>
             </ul>
         </nav>
-        <header>
-            <!-- <img src="assets/header.png" width="400" height="100"/> -->
-        </header>
-        <h1 class="main" id = "myCohortName">Cohort Hypertext Assassins</h1> 
-        <div class="welcome">
-            <h3 class="main" id = "myCohortMotto">Sparking joy one flame at a time \(^ヮ^)/</h3>
-            <a href="https://youtu.be/oHg5SJYRHA0">Welcome to Calcifer: ruler of the Hypertext Assassins!</a>
-        </div>
-        <div class="box">
+    </header>
+    <div class="calciferSpeaks">
+        <img id="calcifer" src="https://media.giphy.com/media/qKmWi9mfycx6E/giphy.gif"/>
+        <img id="speaks" src="/Users/carsenmiller/Documents/2020_Fall/Bits of Good/bootcamp/cohorts/1/assets/speech-bubble.png"/>
+    </div>
+    <h1 class="main" id="myCohortName">Cohort Hypertext Assassins</h1>
+    <div class="welcome">
+        <h3 class="main" id="myCohortMotto">Sparking joy one flame at a time \(^ヮ^)/</h3>
+        <a href="https://youtu.be/oHg5SJYRHA0">Welcome to Calcifer: ruler of the Hypertext Assassins!</a>
+    </div>
+    <!-- <div class="box">
             <h3>Cohort Members</h3>
             <ul class="members">
                 <li>
@@ -67,15 +72,15 @@
                     <a href="https://github.com/GTBitsOfGood/bootcamp/tree/fall-2020/hypertextAssassins-isha">Isha Palakurthy</a>
                 </li>
             </ul>
-        </div>
-        <h3 class="calcifer">Our Dear Mascot: Calcifer</h3>
-        
-        <!-- <img src="https://media.giphy.com/media/qKmWi9mfycx6E/giphy.gif" width="250px" height="200px"/> -->
-        <!-- <h3>License</h3>
+        </div> -->
+    <!-- <h3 class="calcifer">Our Dear Mascot: Calcifer</h3> -->
+
+    <!-- <img src="https://media.giphy.com/media/qKmWi9mfycx6E/giphy.gif" width="250px" height="200px"/> -->
+    <!-- <h3>License</h3>
         <p>This repository is licensed under the <a href="../../LICENSE.txt">GNU GPLv3 License</a>.</p>
         <h3>Bits of Good Motto</h3>
         <p>01000010 01111001 01110100 01100101</p> -->
-        <script src="./index.js"></script>
-    </body>
+    <script src="./index.js"></script>
+</body>
+
 </html>
-    
