Adds fun fact carousel to the site

--- a/cohorts/5/index.html
+++ b/cohorts/5/index.html
@@ -28,8 +28,8 @@
 
     <div class="flexCen">
         <div class="about-section">
-            <h1>TFE's Motto</h1>
-            <p> I am the gatekeeper of my own destiny, and I will have my glory day in the hot sun.</p>
+            <h1 id="hmotto"></h1>
+            <p id="motto"></p>
         </div>
     </div>
 
@@ -48,12 +48,12 @@
 
             <div class="column">
                 <div class="card">
-                    <img src="assets/Image from iOS.jpg" style="width:100%" alt="Madeline">
-                    <div class="container">
-                        <h2>Madeline</h2>
+                    <img src="assets/Image from iOS.jpg" style="width:100%" alt="Madeline" id="Madeline">
+                    <div class="container" id="madCont">
+                        <h2 id="maddie">Madeline</h2>
                         <p class="title"></p>
                         <p></p>
-                        <p><a href="https://github.com/GTBitsOfGood/bootcamp/tree/fall-2020/TFE-madeline"
+                        <p id="madName"><a href="https://github.com/GTBitsOfGood/bootcamp/tree/fall-2020/TFE-madeline"
                                 target="_blank"><button class="button">Contact</button></a></p>
                     </div>
                 </div>
@@ -62,13 +62,12 @@
 
             <div class="column">
                 <div class="card">
-                    <img src="assets/PBD_JasmineLi.jpg" style="width:100%" alt="Jasmine">
-                    <div class="container">
-                        <h2>Jasmine
-                        </h2>
+                    <img src="assets/PBD_JasmineLi.jpg" style="width:100%" alt="Jasmine" id="Jasmine">
+                    <div class="container" id="jasCont">
+                        <h2>Jasmine</h2>
                         <p class="title"></p>
                         <p></p>
-                        <p><a href="https://github.com/GTBitsOfGood/bootcamp/tree/fall-2020/TFE-Jasmine"
+                        <p id="jasName"><a href="https://github.com/GTBitsOfGood/bootcamp/tree/fall-2020/TFE-Jasmine"
                                 target="_blank"><button class="button">Contact</button></a></p>
                     </div>
                 </div>
@@ -77,11 +76,11 @@
 
             <div class="column">
                 <div class="card">
-                    <img src="assets/Me_on_hike.png" style="width:100%" alt="Carlo">
-                    <div class="container">
+                    <img src="assets/Me_on_hike.png" style="width:100%" alt="Carlo" id="Carlo">
+                    <div class="container" id="carCont">
                         <h2>Carlo</h2>
                         <p></p>
-                        <p><a href="https://github.com/GTBitsOfGood/bootcamp/tree/fall-2020/TFE-Carlo"
+                        <p id="carName"><a href="https://github.com/GTBitsOfGood/bootcamp/tree/fall-2020/TFE-Carlo"
                                 target="_blank"><button class="button">Contact</button></a>
                         </p>
                     </div>
@@ -91,11 +90,11 @@
 
             <div class="column">
                 <div class="card">
-                    <img src="assets/IMG_9387.JPG" style="width:100%">
-                    <div class="container">
+                    <img src="assets/IMG_9387.JPG" style="width:100%" id="Sahya">
+                    <div class="container" id="sahCont">
                         <h2>Sahya</h2>
                         <p></p>
-                        <p><a href="https://github.com/GTBitsOfGood/bootcamp/tree/fall-2020/TFE-sahya"
+                        <p id="sahName"><a href="https://github.com/GTBitsOfGood/bootcamp/tree/fall-2020/TFE-sahya"
                                 target="_blank"><button class="button">Contact</button></a></p>
                     </div>
                 </div>
@@ -110,4 +109,5 @@
         </div>
         <p>Thanks for stopping by! :)</p>
     </footer>
+    <script src="index.js"></script>
 </body>
