--- a/index.html
+++ b/index.html
@@ -54,6 +54,11 @@
   </script>
 -->
 </head>
+<div class="sidebar">
+  <a href="#">About</a>
+  <a href="#P">Members</a>
+  <a href="https://en.wikipedia.org/wiki/Chow_Chow" target="_blank">Our Mascot</a>
+</div>
 
 <body>
   <section>
