--- a/cohorts/1/index.html
+++ b/cohorts/1/index.html
@@ -9,6 +9,12 @@
         />
     </head>
     <body>
+        <!--Text Animation Start-->
+        <div class="container">
+            <span class="TopText">Welcome to</span>
+        <span class="BottomText">HyperText Assassins</span>
+        <!--Text Animation End-->
+    </div>
         <header>
             <nav class="navbar">
                 <ul class="navbar-nav">
@@ -64,7 +70,7 @@
             </nav>
         </header>
         <main>
-            <h1>Title lipsum</h1>
+            <!-- <h1>Title lipsum</h1> -->
             <h2>Subtitle lipsum</h2>
             <p>Lucas ipsum dolor sit amet solo anakin anakin skywalker wookiee darth kenobi kenobi bespin yoda. Dantooine yoda coruscant jinn sebulba aayla hutt organa. Solo calrissian mustafar organa lando. Anakin mara palpatine boba mon. Alderaan utapau kenobi organa boba darth vader. Alderaan c-3po owen bespin windu fett ackbar windu solo. Kenobi darth lobot utapau leia maul kenobi fett fett. Mon solo moff antilles kenobi k-3po. Grievous dooku tusken raider grievous. Jabba luuke ewok yoda solo amidala darth owen.
 
