more calcifer icons and temp locations

--- a/cohorts/1/kirtana.html
+++ b/cohorts/1/kirtana.html
@@ -141,7 +141,7 @@
     </main>
     <ul id="info">
         <div id="calciferBoi">
-            <img src="#">
+            <img src="assets/calcifer/six.png">
         </div>
         <div id="infoColor">
             <div id="infoImg">
