--- a/cohorts/1/eashan.html
+++ b/cohorts/1/eashan.html
@@ -141,7 +141,7 @@
     </main>
     <ul id="info">
         <div id="calciferBoi">
-            <img src="#">
+            <img src="assets/calcifer/two.png">
         </div>
         <div id="infoColor">
             <div id="infoImg">
